# faker-e164

./: .bumpversion.cfg  .coveragerc  .gitignore  LICENCE  README.md  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
e164_fake_provider/: __init__.py
faker_e164/: __init__.py  providers.py
tests/: test_providers.py
