[metadata]
name = faker-e164
package = faker_e164
description = Faker Provider to generate phone numbers in E164 format.
url = https://github.com/crowdcomms/faker-e164
author = Adam Jacquier-Parr
author_email = ajparr@crowdcomms.com.au
maintainer = Melvyn Sopacua
maintainer_email = opensource@get-apryl.com
license = Apache-2.0
license_files = LICENSE
version = 0.1.1
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: Utilities

[options]
packages = faker_e164
include_package_data = yes
install_requires =
    phonenumberslite>=8.12
    Faker>=13
test_requires =
    tox
    coverage
